--- a/src/template.html
+++ b/src/template.html
@@ -24,7 +24,13 @@
             <span>All Tasks</span>
         </div>
         <div class="myProjects"> 
-            <span>My Projects</span>
+            <span>My Projects<button id="addCategoryButton">+</button></span>
+            <div class="categoryItem">
+                <span>Cooking</span>
+                <button class="deleteCategory">X</button>
+            </div>
+            <div class="categoryItem"><span>School</span><button class="deleteCategory">X</button></div>
+            
         </div>
     </div>
 
@@ -46,9 +52,8 @@
 
             <div id="formBottom">
                 <select name="options" id="projectDropdown">
-                    <option value="test1">Test1</option>
-                    <option value="test2">Test2</option>
-                    <option value="test3">Test3</option>
+                    <option value="Cooking">Cooking</option>
+                    <option value="School">School</option>
                 </select>
                 <button id="submit" type="submit">Add Task</button>
             </div>
@@ -58,6 +63,10 @@
     </div>
 
     <div id="darken"></div>
+    <div id="categoryPopup" style="display:none;">
+        <input type="text" id="newCategoryInput" placeholder="New Category">
+        <button id="submitCategoryButton">Add</button>
+    </div>
 
 </body>
 </html>
